# fork-renovate-uv-discussion-32226

./: README.md  hello.py  pyproject.toml  renovate.json
