[project]
name = "sample-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.40",
    "my-sample-package-renovate==1.2.3"
]

[tool.uv.sources]
my-sample-package-renovate = { index = "my-private-index" }

[[tool.uv.index]]
name = "my-private-index"
url = "https://my-private-index-url.com/simple"
explicit = true