[project]
name = "sample-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.40",
    "renovate-sample-library-32226==0.1.0"
]

[tool.uv.sources]
renovate-sample-library-32226 = { index = "cloudsmith-os-index" }

[[tool.uv.index]]
name = "cloudsmith-os-index"
url = "https://dl.cloudsmith.io/public/my-renovate-example-org/open-source-renovate-sample-library-32226/python/simple/"
explicit = true
