[project]
name = "sample-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.54",
    "script-background-music==1.6.0"
]

[tool.uv.sources]
script-background-music = { index = "private-index" }

[[tool.uv.index]]
name = "private-index"
url = "https://gitlab.com/api/v4/projects/64242199/packages/pypi/simple"
explicit = true
